syntax = "proto3";

package follow.v1;
option go_package = "follow/v1;followv1";

message FollowRelation {
  int64 id = 1;
  int64 follower = 2;
  int64 followee = 3;
}


service FollowService {
  // 关注
  rpc Follow(FollowRequest) returns (FollowResponse);
  // 取消关注
  rpc CancelFollow(CancelFollowRequest) returns (CancelFollowResponse);
  // 获取关注列表
  rpc GetFollowee(GetFolloweeRequest) returns(GetFolloweeResponse);
  // 获取粉丝列表
  rpc GetFollower(GetFollowerRequest) returns(GetFollowerResponse);
  // 查询关注详情
  rpc FollowInfo(FollowInfoRequest) returns(FollowInfoResponse);
  // 获取关注数、粉丝数
  rpc GetFollowStatics(GetFollowStaticsRequest) returns(GetFollowStaticsResponse);

}

message FollowRequest {
  int64 followee = 1; // 被关注者
  int64 follower = 2; // 关注者
}

message FollowResponse {

}

message CancelFollowRequest {
  int64 followee = 1; // 被关注者
  int64 follower = 2; // 关注者
}

message CancelFollowResponse {

}

message GetFolloweeRequest{
  int64 follower = 1;
  int64 offset = 2;
  int64 limit = 3;
}

message GetFolloweeResponse{
  repeated FollowRelation follow_relations = 1;
}

message GetFollowerRequest{
  int64 followee = 1;
  int64 offset = 2;
  int64 limit = 3;
}

message GetFollowerResponse{
  repeated FollowRelation follow_relations = 1;
}

message FollowInfoRequest{
  int64 follower = 1;
  int64 followee = 2;
}

message FollowInfoResponse{
   FollowRelation follow_relations = 1;
}

message GetFollowStaticsRequest {
  int64 uid = 1;
}

message GetFollowStaticsResponse {
  int64 followees = 1; // 关注数
  int64 followers = 2;  // 粉丝数
}

